--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tool_name: golangci-lint
-        golangci_lint_flags: "-fail-on-error=true"
+        golangci_lint_flags: "--timeout 10m"
 
   # Use revive via golangci-lint binary with "warning" level.
   revive:
