--- a/.github/workflows/lint-required.yml
+++ b/.github/workflows/lint-required.yml
@@ -16,7 +16,7 @@ on:
       - '**.go'
       - 'go.*'
       - '.github/workflows/lint.yml'
-      - '.golangci.yml
+      - '.golangci.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
