--- a/.github/workflows/lint-required.yml
+++ b/.github/workflows/lint-required.yml
@@ -16,7 +16,8 @@ on:
       - '**.go'
       - 'go.*'
       - '.github/workflows/lint.yml'
-      - '.golangci.yml
+      - '.github/workflows/lint-required.yml'
+      - '.golangci.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -26,20 +27,6 @@ jobs:
   golangci-lint:
     if: github.event.pull_request.draft == false
     name: runner / golangci-lint
-    runs-on: ubuntu-22.04
-    steps:
-      - run: 'echo "No build required"'
-
-  revive:
-    if: github.event.pull_request.draft == false
-    name: runner / revive
-    runs-on: ubuntu-22.04
-    steps:
-      - run: 'echo "No build required"'
-
-  errcheck:
-    if: github.event.pull_request.draft == false
-    name: runner / errcheck
     runs-on: ubuntu-22.04
     steps:
       - run: 'echo "No build required"'
